--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "cache:stats": "node src/scripts/clearCache.js --stats",
     "cache:clear": "node src/scripts/clearCache.js --clear",
     "cache:force": "node src/scripts/clearCache.js --force",
