Add CORS support and new test script
- Configured CORS in app.js to allow requests from specified origins and handle preflight requests.
- Updated vercel.json to include CORS headers in the routing configuration.
- Added a new test script for CORS in package.json.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "node index.js",
+    "test:cors": "node test-cors.js",
     "cache:stats": "node src/scripts/clearCache.js --stats",
     "cache:clear": "node src/scripts/clearCache.js --clear",
     "cache:force": "node src/scripts/clearCache.js --force",
