--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,12 @@
     "routes": [
      {
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "index.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, x-user-id"
+      }
      }
     ]
    }
