--- a/vercel.json
+++ b/vercel.json
@@ -10,12 +10,7 @@
     "routes": [
      {
       "src": "/(.*)",
-      "dest": "index.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization, x-user-id"
-      }
+      "dest": "index.js"
      }
     ]
-   }
+}
