--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "node index.js",
+    "dev": "nodemon index.js",
     "test:cors": "node test-cors.js",
     "cache:stats": "node src/scripts/clearCache.js --stats",
     "cache:clear": "node src/scripts/clearCache.js --clear",
@@ -25,7 +25,7 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "redis": "^5.6.1"
