Enhance CORS configuration in app.js and vercel.json
- Updated vercel.json to restrict CORS to a specific origin for improved security.
- Refactored CORS handling in app.js to dynamically allow origins and log blocked requests.
- Added support for credentials in CORS configuration to enable secure cross-origin requests.

--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,10 @@
       "src": "/(.*)",
       "dest": "index.js",
       "headers": {
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "https://newshub-henna.vercel.app",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization, x-user-id"
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, x-user-id",
+        "Access-Control-Allow-Credentials": "true"
       }
      }
     ]
