--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "src": "/(.*)",
       "dest": "index.js",
       "headers": {
-        "Access-Control-Allow-Origin": "https://newshub-henna.vercel.app",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization, x-user-id",
         "Access-Control-Allow-Credentials": "true"
