--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test:cors": "node test-cors.js",
+    "process:news": "node scripts/run-news-processor.js",
     "cache:stats": "node src/scripts/clearCache.js --stats",
     "cache:clear": "node src/scripts/clearCache.js --clear",
     "cache:force": "node src/scripts/clearCache.js --force",
